--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.17",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "classnames": "^2.3.1",
     "d3": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
