--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.1",
     "d3": "^7.0.0",
     "d3-brush": "^3.0.0",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.0.0",
+    "@types/randomcolor": "^0.5.6",
     "autoprefixer": "^9.8.6",
     "gh-pages": "^3.2.3",
     "postcss": "^7.0.36",
